crates/sourcepawn-studio/tests/text_document/goto_definition/snapshots/main__text_document__goto_definition__structs__struct_definition_1.snap
---
source: crates/sourcepawn-studio/tests/text_document/goto_definition/structs.rs
assertion_line: 6
expression: "goto_definition(r#\"\n%! main.sp\nstruct Plugin\n          |\n          ^\n{\n   public const char[] name;        /**< Plugin Name */\n   public const char[] description; /**< Plugin Description */\n   public const char[] author;      /**< Plugin Author */\n   public const char[] version;     /**< Plugin Version */\n   public const char[] url;         /**< Plugin URL */\n};\n\"#)"
---
[
  {
    "originSelectionRange": {
      "start": {
        "line": 0,
        "character": 7
      },
      "end": {
        "line": 0,
        "character": 13
      }
    },
    "targetUri": "file:///main.sp",
    "targetRange": {
      "start": {
        "line": 0,
        "character": 0
      },
      "end": {
        "line": 7,
        "character": 2
      }
    },
    "targetSelectionRange": {
      "start": {
        "line": 0,
        "character": 7
      },
      "end": {
        "line": 0,
        "character": 13
      }
    }
  }
]
